docs: Add environment setup and Ollama token fix documentation
- Add ENV_SETUP.md with comprehensive environment configuration guide
- Add OLLAMA_TOKEN_FIX.md explaining the token limit fix
- Update .gitignore to allow documentation files
- Document all environment variables and configuration options
- Include troubleshooting guide for common issues

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,8 @@ Thumbs.db
 # Markdown files in root (except README and key docs)
 *.md
 !README.md
+!ENV_SETUP.md
+!OLLAMA_TOKEN_FIX.md
 
 
 # Documentation files (organized in docs/)
