docs: Add quality scores analysis and update gitignore
- Add QUALITY_SCORES_ANALYSIS.md with detailed analysis of quality scores
- Update .gitignore to allow QUALITY_SCORES_ANALYSIS.md
- Document root causes and solutions for low quality scores
- Provide recommendations for improving document quality

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ Thumbs.db
 !README.md
 !ENV_SETUP.md
 !OLLAMA_TOKEN_FIX.md
+!QUALITY_SCORES_ANALYSIS.md
 
 
 # Documentation files (organized in docs/)
