feat: Add LLM provider switching scripts and documentation
- Add switch-to-ollama.sh script for quick Ollama setup
- Add switch-to-gemini.sh script for quick Gemini setup
- Add check-llm-provider.sh script to verify current provider
- Add SWITCH_LLM_PROVIDER.md with comprehensive switching guide (Chinese)
- Update README.md with provider switching instructions
- Update .gitignore to allow SWITCH_LLM_PROVIDER.md

These scripts make it easy to switch between Ollama (local) and Gemini (cloud) providers.

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ Thumbs.db
 !ENV_SETUP.md
 !OLLAMA_TOKEN_FIX.md
 !QUALITY_SCORES_ANALYSIS.md
+!SWITCH_LLM_PROVIDER.md
 
 
 # Documentation files (organized in docs/)
