docs: Add Ollama 500 error troubleshooting guide
- Document 500 Internal Server Error causes and solutions
- Provide diagnostic steps for common issues
- Include configuration recommendations for different scenarios
- Add troubleshooting guide for memory, model loading, and server overload issues

--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,7 @@ Thumbs.db
 !SUMMARY_LENGTH_CONFIG.md
 !PDF_DOWNLOAD_SECURITY.md
 !OLLAMA_TIMEOUT_FIX.md
+!OLLAMA_500_ERROR_FIX.md
 
 
 # Documentation files (organized in docs/)
