docs: Reorganize and update all documentation
- Move all documentation to project root for easy access
- Consolidate information into clear, focused guides
- Update README.md with comprehensive quick start
- Update README_BACKEND.md with API and configuration details
- Update README_PRODUCTION.md with production deployment guide
- Create PRODUCTION_SETUP.md for detailed setup steps
- Create DOCS_INDEX.md for documentation navigation
- Fix all internal links after moving files
- Remove outdated migration plans and duplicate docs
- Update .gitignore to allow documentation files

--- a/.gitignore
+++ b/.gitignore
@@ -55,10 +55,13 @@ coverage.xml
 .DS_Store
 Thumbs.db
 
-# Markdown files in root (except README and workflow docs)
+# Markdown files in root (except documentation files)
 *.md
 !README.md
-!WORKFLOW_DOCUMENTATION.md
+!README_BACKEND.md
+!README_PRODUCTION.md
+!PRODUCTION_SETUP.md
+!DOCS_INDEX.md
 
 
 # Documentation files (organized in docs/)
