feat: Organize environment files and consolidate documentation
Environment Files:
- Created .env.development and .env.production for backend
- Created frontend/.env.development and frontend/.env.production
- Updated .env.example with comprehensive template
- All environment files properly organized with clear sections

Documentation Consolidation:
- Created DEPLOYMENT.md (consolidates ORACLE_CLOUD_DEPLOYMENT.md, PRODUCTION_SETUP.md, README_PRODUCTION.md)
- Created CODE_IMPROVEMENTS.md (consolidates IMPROVEMENTS.md with UI improvements reference)
- Deleted duplicate docs/NEON_SETUP.md (kept root version)
- Deleted redundant deployment docs (merged into DEPLOYMENT.md)
- Updated DOCS_INDEX.md to reflect new structure

Benefits:
- Single source of truth for deployment (DEPLOYMENT.md)
- Clear separation of dev/prod environment configs
- Easier to find and maintain documentation
- Reduced duplication and confusion

--- a/.env.development
+++ b/.env.development
@@ -1,32 +1,34 @@
 # =============================================================================
-# OmniDoc Backend - Environment Configuration Template
+# OmniDoc Backend - Development Environment Configuration
 # =============================================================================
-# Copy this file to .env and update with your actual values
-# Development: cp .env.development .env
-# Production: cp .env.production .env
+# Copy this file to .env for local development
+# Usage: cp .env.development .env
 
 # -----------------------------------------------------------------------------
 # Environment Mode
 # -----------------------------------------------------------------------------
-# Options: dev, prod, test
 ENVIRONMENT=dev
 
 # -----------------------------------------------------------------------------
 # Database Configuration
 # -----------------------------------------------------------------------------
 # Local PostgreSQL (for development)
+# Install PostgreSQL locally or use Neon for easier setup
 DATABASE_URL=postgresql://localhost/omnidoc
 
-# Or use Neon (managed PostgreSQL) - recommended
+# Alternative: Use Neon (managed PostgreSQL) - recommended for easier setup
+# Get connection string from: https://console.neon.tech
 # DATABASE_URL=postgresql://user:password@ep-xxx.region.neon.tech/dbname?sslmode=require
 
 # -----------------------------------------------------------------------------
 # Redis Configuration
 # -----------------------------------------------------------------------------
 # Local Redis (for development)
+# Install Redis locally: brew install redis (macOS) or sudo apt-get install redis-server (Linux)
 REDIS_URL=redis://localhost:6379/0
 
-# Or use Upstash (managed Redis) - recommended
+# Alternative: Use Upstash (managed Redis) - recommended for easier setup
+# Get connection details from: https://console.upstash.com
 # REDIS_URL=redis://default:password@endpoint:port
 # UPSTASH_REDIS_REST_URL=https://endpoint.upstash.io
 # UPSTASH_REDIS_REST_TOKEN=your_token_here
@@ -42,19 +44,19 @@ TEMPERATURE=0.3
 # Get API key from: https://aistudio.google.com/app/apikey
 GEMINI_API_KEY=your_gemini_api_key_here
 
-# OpenAI Configuration (optional)
+# OpenAI Configuration (optional, if using OpenAI)
 # OPENAI_API_KEY=your_openai_api_key_here
 # OPENAI_MODEL=gpt-4
 
-# Ollama Configuration (optional, for local models)
+# Ollama Configuration (optional, if using local Ollama)
 # OLLAMA_BASE_URL=http://localhost:11434
 # OLLAMA_MODEL=llama2
 
 # -----------------------------------------------------------------------------
 # Web Application Configuration
 # -----------------------------------------------------------------------------
-# CORS - Allowed origins (comma-separated)
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
+# CORS - Allow local development origins
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000
 
 # Backend server configuration
 BACKEND_HOST=0.0.0.0
@@ -70,20 +72,19 @@ MAX_SUMMARY_LENGTH=3000
 # -----------------------------------------------------------------------------
 # Logging Configuration
 # -----------------------------------------------------------------------------
-# Options: DEBUG, INFO, WARNING, ERROR
+# Development: Use DEBUG level and text format for easier reading
 LOG_LEVEL=DEBUG
-# Options: text, json
 LOG_FORMAT=text
 LOG_DIR=logs
 
 # -----------------------------------------------------------------------------
 # Security Configuration
 # -----------------------------------------------------------------------------
-# Generate secure key: openssl rand -hex 32
-JWT_SECRET_KEY=your-secret-key-change-in-production
+# Generate a secure key: openssl rand -hex 32
+JWT_SECRET_KEY=dev-secret-key-change-in-production
 JWT_ACCESS_TOKEN_EXPIRE_MINUTES=1440
 
-# OAuth2 Configuration (optional)
+# OAuth2 Configuration (optional, for user authentication)
 # GOOGLE_CLIENT_ID=your_google_client_id
 # GOOGLE_CLIENT_SECRET=your_google_client_secret
 # GITHUB_CLIENT_ID=your_github_client_id
@@ -97,6 +98,7 @@ RATE_LIMIT_PER_MINUTE=50
 # -----------------------------------------------------------------------------
 # Performance & Debugging
 # -----------------------------------------------------------------------------
-ENABLE_PROFILING=false
-DEBUG_MODE=false
-VERBOSE_OUTPUT=false
+# Enable profiling in development
+ENABLE_PROFILING=true
+DEBUG_MODE=true
+VERBOSE_OUTPUT=true
