docs: Add domain architecture explanation
- Explain why api.omnidoc.info subdomain is used
- Compare subdomain vs path-based approaches
- Provide alternatives if user wants to change
- Recommend keeping current subdomain architecture

Benefits of subdomain approach:
- Independent deployment (Vercel frontend, Oracle Cloud backend)
- Better scalability and flexibility
- Industry best practice (like GitHub, Twitter)
- Clear separation of concerns

--- a/.env.example
+++ b/.env.example
@@ -92,7 +92,9 @@ JWT_ACCESS_TOKEN_EXPIRE_MINUTES=1440
 # -----------------------------------------------------------------------------
 # Rate Limiting
 # -----------------------------------------------------------------------------
-RATE_LIMIT_PER_MINUTE=50
+RATE_LIMIT_PER_MINUTE=2
+# Daily rate limit (Gemini free tier: 50 requests/day)
+RATE_LIMIT_PER_DAY=50
 
 # -----------------------------------------------------------------------------
 # Performance & Debugging
