feat: Add Azure deployment guide as alternative to Oracle Cloud
- Created comprehensive Azure deployment guide (AZURE_DEPLOYMENT.md)
- Two deployment options: Azure App Service (recommended) and Azure VM
- Step-by-step instructions for both options
- Environment variable configuration
- DNS setup instructions for Hostinger
- Cost comparison with Oracle Cloud
- Migration guide from Oracle Cloud to Azure
- Updated DEPLOYMENT.md and DOCS_INDEX.md to include Azure option

Azure App Service Benefits:
- Fully managed platform
- Automatic scaling
- Built-in SSL certificates
- Easy GitHub deployment
- Free tier available

Azure VM Benefits:
- Full control over environment
- More flexible configuration
- Similar to Oracle Cloud setup

--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,7 @@ Thumbs.db
 !DEPLOYMENT.md
 !DOMAIN_ARCHITECTURE.md
 !HOSTINGER_DNS_SETUP.md
+!AZURE_DEPLOYMENT.md
 
 # Documentation files in docs/ (allow QUALITY_SCORING.md)
 docs/*.md
