docs: Add deployment options comparison (Code vs Container)
- Created DEPLOYMENT_OPTIONS.md with detailed comparison
- Recommends starting with Code deployment (easier, faster)
- Explains when to consider Container deployment
- Updated AZURE_DEPLOYMENT.md to reference comparison guide

Recommendation: Start with Code deployment because:
- Easier setup (no Docker knowledge needed)
- Faster deployment (Azure handles everything)
- Works perfectly on free tier
- Can migrate to Container later if needed

Container deployment is better for:
- Multi-platform deployment
- Exact environment consistency
- Complex dependencies
- Local production-like testing

--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,7 @@ Thumbs.db
 !HOSTINGER_DNS_SETUP.md
 !AZURE_DEPLOYMENT.md
 !AZURE_FREE_TIER_SETUP.md
+!DEPLOYMENT_OPTIONS.md
 
 # Documentation files in docs/ (allow QUALITY_SCORING.md)
 docs/*.md
