--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,10 @@ fastapi>=0.100.0
 uvicorn>=0.23.0
 gunicorn>=21.2.0  # Production WSGI server
 pydantic>=2.0.0
+aiohttp>=3.9.0  # For async HTTP requests (Ollama, etc.)
+httpx>=0.25.0  # Alternative async HTTP client
+websockets>=12.0  # For WebSocket support in uvicorn
+requests>=2.31.0  # HTTP client
 
 # Templates
 jinja2>=3.1.2
