docs: Add GitHub Copilot code review ruleset
- Created .github/copilot-instructions.md with comprehensive review rules
- Includes backend (Python/FastAPI) and frontend (Next.js/React) guidelines
- Code quality, security, error handling, and testing requirements
- Specific patterns and anti-patterns to check
- Review approval criteria
- Helps automate code reviews for pull requests
- Updated .gitignore to allow .github/copilot-instructions.md

--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,8 @@ coverage.xml
 .DS_Store
 Thumbs.db
 
-# Markdown files (except README.md)
+# Markdown files (except README.md and .github/copilot-instructions.md)
 *.md
 !README.md
+!/.github/copilot-instructions.md
 docs/*.md
